--- a/frontend/web/templates/report.html
+++ b/frontend/web/templates/report.html
@@ -39,6 +39,7 @@
           <div class="col-lg-12 text-center">
             <h1 class="mt-5">Result of analysis</h1>
 
+            <h1>{{.Name}}<h1></h1>
             <h1>{{.Hash}}<h1>
               <ul>
                   {{range $index, $results := .AnalysisItem}}
