--- a/frontend/web/templates/waiting.html
+++ b/frontend/web/templates/waiting.html
@@ -13,6 +13,7 @@
 
     <!-- Bootstrap core CSS -->
     <link href="/css/bootstrap.min.css" rel="stylesheet">
+    <link href="/css/waitanimation.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
     <style>
@@ -38,6 +39,7 @@
       <div class="row">
         <div class="col-lg-12 text-center">
           <h1 class="mt-5">Waiting on analysis</h1>
+          <center><div class="loader"></div></center> 
         </div>
       </div>
     </div>
