--- a/frontend/web/templates/report.html
+++ b/frontend/web/templates/report.html
@@ -7,7 +7,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="">
-    <meta http-equiv="refresh" content="20">
 
     <title>Bare - Start Bootstrap Template</title>
 
@@ -39,72 +38,9 @@
           <div class="col-lg-12 text-center">
             <h1 class="mt-5">Result of analysis</h1>
 
-            <h1>{{.Name}}<h1></h1>
-            <h1>{{.Hash}}<h1>
-              <ul>
-                  {{range $index, $results := .AnalysisItem}}
-                  {{$index}}
-                  <div id="accordion">
-                    <div class="card">
-                      <div class="card-header" id="heading{{$index}}1">
-                        <h5 class="mb-0">
-                          <button class="btn btn-link" data-toggle="collapse" data-target="#collapse{{$index}}1" aria-expanded="true" aria-controls="collapse{{$index}}1">
-                            Catagory
-                          </button>
-                        </h5>
-                      </div>
-                  
-                      <div id="collapse{{$index}}1" class="collapse show" aria-labelledby="heading{{$index}}1" data-parent="#accordion">
-                        <div class="card-body">
-                          {{.Catagory}}
-                        </div>
-                      </div>
-                    </div>
-                    <div class="card">
-                      <div class="card-header" id="heading{{$index}}2">
-                        <h5 class="mb-0">
-                          <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapse{{$index}}2" aria-expanded="false" aria-controls="collapse{{$index}}2">
-                            Name
-                          </button>
-                        </h5>
-                      </div>
-                      <div id="collapse{{$index}}2" class="collapse" aria-labelledby="heading{{$index}}2" data-parent="#accordion">
-                        <div class="card-body">
-                          {{.Name}}
-                        </div>
-                      </div>
-                    </div>
-                    <div class="card">
-                      <div class="card-header" id="heading{{$index}}3">
-                        <h5 class="mb-0">
-                          <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapse{{$index}}3" aria-expanded="false" aria-controls="collapse{{$index}}3">
-                            Language
-                          </button>
-                        </h5>
-                      </div>
-                      <div id="collapse{{$index}}3" class="collapse" aria-labelledby="heading{{$index}}3" data-parent="#accordion">
-                        <div class="card-body">
-                          {{.Language}}
-                        </div>
-                      </div>
-                    </div>
-                    <div class="card">
-                      <div class="card-header" id="heading{{$index}}4">
-                        <h5 class="mb-0">
-                          <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapse{{$index}}4" aria-expanded="false" aria-controls="collapse{{$index}}4">
-                            Findings
-                          </button>
-                        </h5>
-                      </div>
-                      <div id="collapse{{$index}}4" class="collapse" aria-labelledby="heading{{$index}}4" data-parent="#accordionInner">
-                        <div class="card-body">
-                           Test
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                  {{end}}
-              </ul>
+            {{template "reportdisplay.tmpl" .}}
+
+            
           </div>
         </div>
       </div>
