--- a/frontend/web/templates/reportdisplay.tmpl
+++ b/frontend/web/templates/reportdisplay.tmpl
@@ -1,16 +1,29 @@
 <h1>{{.Name}}<h1>
-<h1>{{.Hash}}<h1>
   <ul>
+    <div class="card">
+        <div class="card-header" id="headingHash">
+            <h5 class="mb-0">
+                <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseHash" aria-expanded="false" aria-controls="collapseHash">
+                        Sha256 hash
+                </button>
+                </h5>
+            </div>
+            <div id="collapseHash" class="collapse" aria-labelledby="headingHash" data-parent="#accordion">
+                <div class="card-body">
+                    {{.Hash}}
+                </div>
+            </div>
+        </div>
       {{range $index, $results := .AnalysisItem}}
         <div class="card">
           <div class="card-header" id="heading{{$index}}">
             <h5 class="mb-0">
-              <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapse{{$index}}" aria-expanded="false" aria-controls="collapse{{$index}}">
+              <button class="btn btn-link" data-toggle="collapse" data-target="#collapse{{$index}}" aria-expanded="true" aria-controls="collapse{{$index}}">
                     {{.Catagory}} analysis of {{.Name}}
               </button>
             </h5>
           </div>
-          <div id="collapse{{$index}}" class="collapse" aria-labelledby="heading{{$index}}" data-parent="#accordion">
+          <div id="collapse{{$index}}" class="collapse show" aria-labelledby="heading{{$index}}" data-parent="#accordion">
             <div class="card-body">
                 After running {{.Name}} the following potential issues were found
                 {{template "findingsdisplay.tmpl" .}}
