--- a/frontend/web/templates/reportdisplay.tmpl
+++ b/frontend/web/templates/reportdisplay.tmpl
@@ -18,8 +18,8 @@
         <div class="card">
           <div class="card-header" id="heading{{$index}}">
             <h5 class="mb-0">
-              <button class="btn btn-link" data-toggle="collapse" data-target="#collapse{{$index}}" aria-expanded="true" aria-controls="collapse{{$index}}">
-                    {{.Catagory}} analysis of {{.Name}}
+              <button class="btn btn-link" data-toggle="collapse" data-target="#collapse{{$index}}" aria-expanded="true" aria-controls="collapse{{$index}}">    
+                {{.Catagory}} analysis of {{.Name}} <span class="badge badge-primary">{{.ILength}}</span><span class="badge badge-warning">{{.WLength}}</span><span class="badge badge-danger">{{.DLength}}</span>
               </button>
             </h5>
           </div>
