--- a/frontend/web/templates/reportdisplay.tmpl
+++ b/frontend/web/templates/reportdisplay.tmpl
@@ -23,7 +23,7 @@
               </button>
             </h5>
           </div>
-          <div id="collapse{{$index}}" class="collapse show" aria-labelledby="heading{{$index}}" data-parent="#accordion">
+          <div id="collapse{{$index}}" class="collapse {{.Show}}" aria-labelledby="heading{{$index}}" data-parent="#accordion">
             <div class="card-body">
                 After running {{.Name}} the following potential issues were found
                 {{template "findingsdisplay.tmpl" .}}
