--- a/frontend/web/templates/waiting.html
+++ b/frontend/web/templates/waiting.html
@@ -9,7 +9,7 @@
     <meta name="author" content="">
     <meta http-equiv="refresh" content="20">
 
-    <title>Bare - Start Bootstrap Template</title>
+    <title>FirmScan - Waiting on analysis</title>
 
     <!-- Bootstrap core CSS -->
     <link href="/css/bootstrap.min.css" rel="stylesheet">
